--- a/.gh-pages/index.html
+++ b/.gh-pages/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>iptv-org/epg</title>
+    <title>iptv/epg</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css" />
     <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
   </head>
@@ -11,7 +11,7 @@
     <div class="navbar" style="background-color: transparent">
       <div class="navbar-end">
         <div class="navbar-item">
-          <a href="https://github.com/iptv-org/epg">
+          <a href="https://github.com/adilem/epg">
             <span class="icon">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
                 <path
